--- a/static/css/components.css
+++ b/static/css/components.css
@@ -36,6 +36,14 @@
   z-index: 1;
 }
 
+.photo-card-image-container picture {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 .photo-card-image {
   position: absolute;
   inset: 0;
