--- a/static/css/components.css
+++ b/static/css/components.css
@@ -455,7 +455,7 @@
   display: flex;
   flex-direction: column;
   min-height: 0;
-  overflow: hidden;
+  overflow-y: auto;
   padding-right: var(--space-2);
 }
 
@@ -471,8 +471,6 @@
 }
 
 .photo-meta-full {
-  flex: 1;
-  overflow: auto hidden;
   margin-top: var(--space-2);
   padding-right: var(--space-2);
   display: block;
